poke/testsuite/poke.pkl/struct-method-diag-6.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    method foo = void: {}
    method bar = void:
      {
        defun baz = void:
        {
          foo; /* { dg-error "invalid reference" } */
        }
      }
  };
